# PFL_graphs

./: Makefile  README.md  TP1.hs  feup-pfl1.cabal  feup-proj1.cabal  graph_converter.py
.github/workflows/: haskell.yml
src/: TP1.hs
test/: TP1Test.hs
