cabal-version:      2.4
name:               feup-pfl1
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             T06_G09
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

library
    exposed-modules:  TP1

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite feup-pfl1-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TP1Test.hs
    build-depends:    base, QuickCheck, hspec, feup-pfl1
